[project]
name = "enferno"
version = "13.1.0"
description = "A modern Flask framework optimized for AI-assisted development workflows"
authors = [
    {name = "Level09", email = "hello@level09.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "aiosmtplib>=5.0.0",
    "aiosqlite>=0.20.0",
    "authlib>=1.3.0",
    "bcrypt>=4.3.0",
    "blinker>=1.9.0",
    "click>=8.3.1",
    "cryptography>=45.0.5",
    "email-validator>=2.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "libpass>=1.9.0",
    "orjson>=3.10.18",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "qrcode>=8.2",
    "quart>=0.20.0",
    "quart-security>=1.1.0",
    "quart-session>=3.0.0",
    "rich>=14.0.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.40.0",
    "webauthn>=2.6.0",
    "wtforms>=3.2.1",
]

[tool.uv.sources]
quart-security = { path = "../quart-security", editable = true }

[project.optional-dependencies]
full = [
    "redis>=7.1.0",
    "celery>=5.5.3",
    "kombu>=5.5.4",
    "amqp>=5.3.1",
    "vine>=5.1.0",
]
dev = [
    "ruff",
    "pre-commit",
]
wsgi = [
    "uwsgi>=2.0.30",
]
asgi = [
    "hypercorn>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "C901",   # complexity
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["enferno"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
